# Jornada-De-Dados

./: things_to_study.txt
BootCamp - Python/JdD_001/: main.py
BootCamp - Python/JdD_002/: desafio.py  main.py
BootCamp - Python/JdD_003/: README.md  desafio.py
BootCamp - Python/JdD_004/: README.md
BootCamp - Python/JdD_006/: README.md  pyproject.toml
BootCamp - Python/JdD_007/: README.md  exercises.py  main.py
BootCamp - Python/JdD_008/: funcoes.py  pyproject.toml
BootCamp - Python/JdD_009/: README.md  pyproject.toml
BootCamp - Python/JdD_010/: README.md
BootCamp - Python/JdD_011/: README.md
BootCamp - Python/JdD_012/: README.md  pyproject.toml
BootCamp - Python/JdD_013-14/: README.md  pyproject.toml
BootCamp - Python/JdD_015/: README.md  pyproject.toml
BootCamp - Python/JdD_015/data/: products.csv
BootCamp - Python/JdD_015/src/FakeApi/: start.py
BootCamp - Python/JdD_015/src/lib/classes/: APICollector.py
BootCamp - Python/JdD_015/src/lib/contracts/: schema.py
BootCamp - Python/JdD_015/src/lib/tools/: retry.py
BootCamp - Python/JdD_015/src/lib/tools/aws/: client.py
BootCamp - Python/JdD_016/: database.db
BootCamp - Python/JdD_017/: README.md  pyproject.toml
BootCamp - Python/JdD_018/: pokemon.db  pyproject.toml
BootCamp - Python/JdD_018/src/: main.py
BootCamp - Python/JdD_018/src/lib/classes/: db.py  models.py
BootCamp - Python/JdD_020/: pyproject.toml
BootCamp - Python/JdD_020/backend/: crud.py  main.py  models.py  router.py
BootCamp - SQL/: NorthWind_Query.sql
BootCamp-Python/JdD_002/: README.md
BootCamp-Python/JdD_003/: main.py
BootCamp-Python/JdD_004/: desafio.py
BootCamp-Python/JdD_007/: funcoes.py
BootCamp-Python/JdD_008/: README.md  (+1 more)
BootCamp-Python/JdD_011/: pyproject.toml
BootCamp-Python/JdD_011/01 - Basico/: exemplo.csv
BootCamp-Python/JdD_011/02 - Encapsulamento/PrimeiroExemplo/: conexao.py
BootCamp-Python/JdD_011/02 - Encapsulamento/SegundoExemplo/: conexao.py  exemplo.db
BootCamp-Python/JdD_011/03 - Heranca/: exemplo.csv
BootCamp-Python/JdD_011/05 - Getter_Setter/: basico.py
BootCamp-Python/JdD_019/: README.md  launch.json  pyproject.toml  test.db
BootCamp-SQL/: BankDatabase_Query.sql  NorthWind_Query.sql
(+38 files in other folders)
