[tool.poetry]
name = "jdd-015"
version = "0.1.0"
description = ""
authors = ["Durso <dursoarthur@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
faker = "^30.3.0"
pandas = "^2.2.3"
uvicorn = "^0.31.1"
requests = "^2.32.3"
schedule = "^1.2.2"
boto3 = "^1.35.37"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
